--- a/code-along.css
+++ b/code-along.css
@@ -1,3 +1,26 @@
 nav {
-  display: none;
+  display: flex;
+  justify-content: space-around;
+}
+
+.container {
+  display: flex;
+}
+
+aside {
+  min-width: 20%;
+  align-items: center;
+  justify-content: center;
+}
+
+img {
+  width: 175px;
+  height: 125px;
+
+}
+
+section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
